changed availability text

--- a/index.html
+++ b/index.html
@@ -1527,8 +1527,8 @@ body {
                 <h3>Versiuni, disponibilitate și traduceri</h3>
             </div>
             <div class="availability-content">
-                <p>RAADS-R a fost tradusă în limba suedeză și a fost disponibilă în majoritatea limbilor prin intermediul Google Translate. Totuși, testele RAADS-R online nu par să abunde.</p>
-                <p class="highlight-text">Până în prezent, suntem (probabil) singurii care găzduiesc RAADS-R online în limba română.</p>
+                <p>RAADS-R a fost tradus în limba suedeză și în majoritatea limbilor prin intermediul translatorilor. Totuși, testele RAADS-R online <b><i>NU</i></b> par să abunde.</p>
+                <p class="highlight-text">În prezent, suntem (probabil) singurii care găzduiesc RAADS-R online în 🇷🇴 limba română.</p>
             </div>
         </div>
 
