small change to github link

--- a/index.html
+++ b/index.html
@@ -1371,7 +1371,7 @@ body {
                             </div>
                             <div class="privacy-item">
                                 <i class="fas fa-brands fa-github text-warning me-2"></i>
-                                Cod sursă transparent și disponibil GRATUIT: <a href="https://github.com/hodorogandrei/testautism" target="_blank">Github</a>
+                                Cod sursă transparent și disponibil GRATUIT pe <a style="display: inline;" href="https://github.com/hodorogandrei/testautism" target="_blank">Github</a>
                             </div>
                         </div>
                     </p>
