added CAT-Q scale

--- a/index.html
+++ b/index.html
@@ -1621,7 +1621,7 @@ body {
                 </a>
             </div>
         </div>
-        <b>Website realizat cu sprijinul:</b>
+        Website realizat cu 💖 de către <b>Andrei Hodorog</b> și <b>Ovidiu Platon</b>. Parteneri:
         <div class="partner-logos">
             <div class="container">
                 <div class="row justify-content-center align-items-center g-4">
