--- a/cat-q.html
+++ b/cat-q.html
@@ -477,6 +477,19 @@ body {
         padding: 20px;
     }
 }
+
+.alert-danger .alert-heading {
+    color: #721c24;
+    font-weight: bold;
+}
+
+.alert-danger {
+    cursor: pointer;
+}
+
+.alert-danger:hover {
+    background-color: #f8d7da;
+}
 </style>
 </head>
 <body>
@@ -601,145 +614,134 @@ const questions = [
     { id:25, text: 'În situațiile sociale, simt că mă prefac a fi „normal(ă)".', category: "Asimilare" }
 ];
 
+const form = document.getElementById('catqForm');
+const questionsContainer = document.getElementById('questions');
 
-document.addEventListener('DOMContentLoaded', () => {
-    const form = document.getElementById('catqForm');
-    const questionsContainer = document.getElementById('questions');
+// Initialize form with questions
+questions.forEach((question, index) => {
+    const questionDiv = document.createElement('div');
+    questionDiv.classList.add('question', 'mb-4');
+    questionDiv.setAttribute('role', 'group');
+    questionDiv.setAttribute('aria-labelledby', `question-${index}-label`);
+    questionDiv.setAttribute('data-question-number', index + 1);
 
-    if (!form || !questionsContainer) {
-        console.error('Required elements not found. Check HTML structure.');
-        return;
-    }
+    // Question label container
+    const questionLabel = document.createElement('div');
+    questionLabel.id = `question-${index}-label`;
+    questionLabel.classList.add('question-text');
+    questionLabel.innerHTML = `${index + 1}. ${question.text}`;
 
-    // Initialize form with questions
-    questions.forEach((question, index) => {
-        const questionDiv = document.createElement('div');
-        questionDiv.classList.add('question', 'mb-4');
-        questionDiv.setAttribute('role', 'group');
-        questionDiv.setAttribute('aria-labelledby', `question-${index}-label`);
-        questionDiv.setAttribute('data-question-number', index + 1);
+    // Add category indicator for screen readers
+    const categoryNote = document.createElement('span');
+    categoryNote.classList.add('sr-only');
+    categoryNote.innerHTML = ` (${question.category})`;
+    questionLabel.appendChild(categoryNote);
 
-        // Question label container
-        const questionLabel = document.createElement('div');
-        questionLabel.id = `question-${index}-label`;
-        questionLabel.classList.add('question-text');
-        questionLabel.innerHTML = `${index + 1}. ${question.text}`;
+    questionDiv.appendChild(questionLabel);
 
-        // Add category indicator for screen readers
-        const categoryNote = document.createElement('span');
-        categoryNote.classList.add('sr-only');
-        categoryNote.innerHTML = ` (${question.category})`;
-        questionLabel.appendChild(categoryNote);
+    // Create fieldset for radio buttons
+    const fieldset = document.createElement('fieldset');
+    fieldset.classList.add('options');
 
-        questionDiv.appendChild(questionLabel);
+    // Add legend for screen readers
+    const legend = document.createElement('legend');
+    legend.classList.add('sr-only');
+    legend.innerHTML = `Opțiuni pentru întrebarea ${index + 1}`;
+    fieldset.appendChild(legend);
 
-        // Create fieldset for radio buttons
-        const fieldset = document.createElement('fieldset');
-        fieldset.classList.add('options');
+    const options = [
+        {
+            label: "Dezacord puternic",
+            value: question.reverse ? "7" : "1",
+            description: "Dezacord total sau puternic cu afirmația"
+        },
+        {
+            label: "Dezacord",
+            value: question.reverse ? "6" : "2",
+            description: "Dezacord sau respingere a afirmației"
+        },
+        {
+            label: "Ușor dezacord",
+            value: question.reverse ? "5" : "3",
+            description: "Ușoară dezaprobare sau respingere a afirmației"
+        },
+        {
+            label: "Neutru",
+            value: "4",
+            description: "Nici acord, nici dezacord cu afirmația"
+        },
+        {
+            label: "Ușor acord",
+            value: question.reverse ? "3" : "5",
+            description: "Ușoară aprobare sau acceptare a afirmației"
+        },
+        {
+            label: "Acord",
+            value: question.reverse ? "2" : "6",
+            description: "Acord sau acceptare a afirmației"
+        },
+        {
+            label: "Acord puternic",
+            value: question.reverse ? "1" : "7",
+            description: "Acord total sau puternic cu afirmația"
+        }
+    ];
 
-        // Add legend for screen readers
-        const legend = document.createElement('legend');
-        legend.classList.add('sr-only');
-        legend.innerHTML = `Opțiuni pentru întrebarea ${index + 1}`;
-        fieldset.appendChild(legend);
+    options.forEach((option, optionIndex) => {
+        const label = document.createElement('label');
+        label.classList.add('form-check');
+        label.setAttribute('for', `q${index}o${optionIndex}`);
 
-        const options = [
-            {
-                label: "Dezacord puternic",
-                value: question.reverse ? "7" : "1",
-                description: "Dezacord total sau puternic cu afirmația"
-            },
-            {
-                label: "Dezacord",
-                value: question.reverse ? "6" : "2",
-                description: "Dezacord sau respingere a afirmației"
-            },
-            {
-                label: "Ușor dezacord",
-                value: question.reverse ? "5" : "3",
-                description: "Ușoară dezaprobare sau respingere a afirmației"
-            },
-            {
-                label: "Neutru",
-                value: "4",
-                description: "Nici acord, nici dezacord cu afirmația"
-            },
-            {
-                label: "Ușor acord",
-                value: question.reverse ? "3" : "5",
-                description: "Ușoară aprobare sau acceptare a afirmației"
-            },
-            {
-                label: "Acord",
-                value: question.reverse ? "2" : "6",
-                description: "Acord sau acceptare a afirmației"
-            },
-            {
-                label: "Acord puternic",
-                value: question.reverse ? "1" : "7",
-                description: "Acord total sau puternic cu afirmația"
-            }
-        ];
+        const input = document.createElement('input');
+        input.type = 'radio';
+        input.id = `q${index}o${optionIndex}`;
+        input.name = `q${index}`;
+        input.value = option.value;
+        input.classList.add('form-check-input');
+        input.setAttribute('aria-describedby', `q${index}o${optionIndex}-desc`);
 
-        options.forEach((option, optionIndex) => {
-            const label = document.createElement('label');
-            label.classList.add('form-check');
-            label.setAttribute('for', `q${index}o${optionIndex}`);
+        const span = document.createElement('span');
+        span.classList.add('form-check-label');
+        span.innerHTML = option.label;
 
-            const input = document.createElement('input');
-            input.type = 'radio';
-            input.id = `q${index}o${optionIndex}`;
-            input.name = `q${index}`;
-            input.value = option.value;
-            input.classList.add('form-check-input');
-            input.setAttribute('aria-describedby', `q${index}o${optionIndex}-desc`);
+        // Add description for screen readers
+        const description = document.createElement('span');
+        description.id = `q${index}o${optionIndex}-desc`;
+        description.classList.add('sr-only');
+        description.innerHTML = option.description;
 
-            const span = document.createElement('span');
-            span.classList.add('form-check-label');
-            span.innerHTML = option.label;
-
-            // Add description for screen readers
-            const description = document.createElement('span');
-            description.id = `q${index}o${optionIndex}-desc`;
-            description.classList.add('sr-only');
-            description.innerHTML = option.description;
-
-            label.appendChild(input);
-            label.appendChild(span);
-            label.appendChild(description);
-            fieldset.appendChild(label);
-        });
-
-        questionDiv.appendChild(fieldset);
-
-        // Add help button
-        const helpButton = document.createElement('button');
-        helpButton.type = 'button';
-        helpButton.classList.add('help-button', 'btn', 'btn-link', 'mt-2');
-        helpButton.innerHTML = '<i class="fas fa-question-circle"></i> Ajutor pentru această întrebare';
-        helpButton.setAttribute('aria-expanded', 'false');
-        helpButton.setAttribute('aria-controls', `help-${index}`);
-
-        const helpContent = document.createElement('div');
-        helpContent.id = `help-${index}`;
-        helpContent.classList.add('help-content');
-        helpContent.setAttribute('hidden', '');
-        helpContent.innerHTML = `
-            <div class="alert alert-info mt-2">
-                <p>Această întrebare face parte din categoria: <strong>${question.category}</strong></p>
-                <p>${getHelpText(question.category)}</p>
-                <p>Selectați opțiunea care descrie cel mai bine experiența dumneavoastră.</p>
-            </div>
-        `;
-
-        questionDiv.appendChild(helpButton);
-        questionDiv.appendChild(helpContent);
-
-        questionsContainer.appendChild(questionDiv);
+        label.appendChild(input);
+        label.appendChild(span);
+        label.appendChild(description);
+        fieldset.appendChild(label);
     });
 
-    // Initialize progress tracker
-    initProgressTracker();
+    questionDiv.appendChild(fieldset);
+
+    // Add help button
+    const helpButton = document.createElement('button');
+    helpButton.type = 'button';
+    helpButton.classList.add('help-button', 'btn', 'btn-link', 'mt-2');
+    helpButton.innerHTML = '<i class="fas fa-question-circle"></i> Ajutor pentru această întrebare';
+    helpButton.setAttribute('aria-expanded', 'false');
+    helpButton.setAttribute('aria-controls', `help-${index}`);
+
+    const helpContent = document.createElement('div');
+    helpContent.id = `help-${index}`;
+    helpContent.classList.add('help-content');
+    helpContent.setAttribute('hidden', '');
+    helpContent.innerHTML = `
+        <div class="alert alert-info mt-2">
+            <p>Această întrebare face parte din categoria: <strong>${question.category}</strong></p>
+            <p>${getHelpText(question.category)}</p>
+            <p>Selectați opțiunea care descrie cel mai bine experiența dumneavoastră.</p>
+        </div>
+    `;
+
+    questionDiv.appendChild(helpButton);
+    questionDiv.appendChild(helpContent);
+
+    questionsContainer.appendChild(questionDiv);
 });
 
 // Helper Functions
@@ -774,58 +776,65 @@ function getProgressMessage(percentage, answered) {
 }
 
 // Progress Tracking
-function initProgressTracker() {
-    const progressContainer = document.querySelector('.progress-container');
-    const progressFill = document.querySelector('.progress-fill');
-    const questionsCompleted = document.querySelector('.questions-completed');
-    const timeEstimate = document.querySelector('.time-estimate');
-    const progressMessage = document.querySelector('.progress-message');
+const progressContainer = document.querySelector('.progress-container');
+const progressFill = document.querySelector('.progress-fill');
+const questionsCompleted = document.querySelector('.questions-completed');
+const timeEstimate = document.querySelector('.time-estimate');
+const progressMessage = document.querySelector('.progress-message');
 
-    if (!progressContainer || !progressFill || !questionsCompleted ||
-        !timeEstimate || !progressMessage) {
-        console.warn('Progress tracking elements not found');
-        return;
+// Monitor radio changes for progress updates
+document.addEventListener('change', (e) => {
+    if (e.target.type === 'radio') {
+        const currentQuestion = e.target.closest('.question');
+        if (currentQuestion) {
+            currentQuestion.classList.add('completed');
+            updateProgress();
+
+            currentQuestion.classList.remove('highlight-unanswered');
+
+            // Also clear any error messages when a question is answered
+            const errorDiv = document.getElementById('error');
+            const errorBelowDiv = document.getElementById('errorBelow');
+
+            if (errorDiv) {
+                errorDiv.style.display = 'none';
+                errorDiv.innerHTML = '';
+            }
+            if (errorBelowDiv) {
+                errorBelowDiv.style.display = 'none';
+                errorBelowDiv.innerHTML = '';
+            }
+
+            // Find next unanswered question
+            const nextUnanswered = Array.from(document.querySelectorAll('.question:not(.completed)'))
+                .find(q => !q.querySelector('input[type="radio"]:checked'));
+
+            if (nextUnanswered) {
+                document.querySelectorAll('.question').forEach(q => q.classList.remove('current'));
+                nextUnanswered.classList.add('current');
+                scrollToQuestion(nextUnanswered);
+            }
+        }
     }
+});
 
-    // Monitor radio changes for progress updates
-    document.addEventListener('change', (e) => {
-        if (e.target.type === 'radio') {
-            const currentQuestion = e.target.closest('.question');
-            if (currentQuestion) {
-                currentQuestion.classList.add('completed');
-                updateProgress();
+// Monitor scroll for progress bar visibility
+window.addEventListener('scroll', () => {
+    const testContainer = document.getElementById('questions');
+    if (testContainer) {
+        const rect = testContainer.getBoundingClientRect();
+        const hasAnswers = document.querySelector('input[type="radio"]:checked') !== null;
 
-                // Find next unanswered question
-                const nextUnanswered = Array.from(document.querySelectorAll('.question:not(.completed)'))
-                    .find(q => !q.querySelector('input[type="radio"]:checked'));
-
-                if (nextUnanswered) {
-                    document.querySelectorAll('.question').forEach(q => q.classList.remove('current'));
-                    nextUnanswered.classList.add('current');
-                    scrollToQuestion(nextUnanswered);
-                }
-            }
+        if (rect.top <= 0 && rect.bottom >= 0 && hasAnswers) {
+            progressContainer.classList.add('visible');
+        } else {
+            progressContainer.classList.remove('visible');
         }
-    });
+    }
+});
 
-    // Monitor scroll for progress bar visibility
-    window.addEventListener('scroll', () => {
-        const testContainer = document.getElementById('questions');
-        if (testContainer) {
-            const rect = testContainer.getBoundingClientRect();
-            const hasAnswers = document.querySelector('input[type="radio"]:checked') !== null;
-
-            if (rect.top <= 0 && rect.bottom >= 0 && hasAnswers) {
-                progressContainer.classList.add('visible');
-            } else {
-                progressContainer.classList.remove('visible');
-            }
-        }
-    });
-
-    // Initial progress update
-    updateProgress();
-}
+// Initial progress update
+updateProgress();
 
 function updateProgress() {
     const progressFill = document.querySelector('.progress-fill');
@@ -1295,9 +1304,18 @@ document.getElementById('submitBtn').addEventListener('click', (e) => {
         }
     });
 
-    // Handle unanswered questions
+    // Handle unanswered questions with more detailed error message
     if (unanswered.length > 0) {
-        const errorMessage = `Te rog să răspunzi la toate întrebările. Întrebări fără răspuns: ${unanswered.join(', ')}`;
+        const errorMessage = `
+            <div class="alert-heading mb-2">
+                <i class="fas fa-exclamation-circle"></i>
+                Te rog să răspunzi la toate întrebările
+            </div>
+            <p class="mb-2">Întrebări fără răspuns: ${unanswered.join(', ')}</p>
+            <small class="text-muted">
+                Click pe numere pentru a naviga la întrebările respective
+            </small>
+        `;
 
         if (errorDiv) {
             errorDiv.innerHTML = errorMessage;
@@ -1308,21 +1326,39 @@ document.getElementById('submitBtn').addEventListener('click', (e) => {
             errorBelowDiv.style.display = 'block';
         }
 
-        // Find and scroll to first unanswered
+        // Add click handlers to question numbers in error message
+        const numberLinks = document.querySelectorAll('.alert-danger');
+        numberLinks.forEach(alert => {
+            alert.addEventListener('click', (e) => {
+                const number = e.target.textContent;
+                if (!isNaN(number)) {
+                    const questionDiv = document.querySelector(`[data-question-number="${number}"]`);
+                    if (questionDiv) {
+                        scrollToQuestion(questionDiv);
+                    }
+                }
+            });
+        });
+
+        // Find and scroll to first unanswered with proper offset
         const firstUnanswered = document.querySelector('.highlight-unanswered');
         if (firstUnanswered) {
-            scrollToQuestion(firstUnanswered);
+            const progressContainer = document.querySelector('.progress-container');
+            const offset = progressContainer ? progressContainer.offsetHeight + 20 : 20;
+
+            window.scrollTo({
+                top: firstUnanswered.getBoundingClientRect().top + window.pageYOffset - offset,
+                behavior: 'smooth'
+            });
         }
         return;
     }
 
-    // Calculate scores
+    // If all questions are answered, proceed with scoring
     const scores = calculateScores();
-
-    // Display results - this will also handle showing/hiding appropriate buttons
     displayResults(scores);
 
-    // Hide progress bar after completion
+    // Hide progress bar and error messages after completion
     const progressContainer = document.querySelector('.progress-container');
     if (progressContainer) {
         progressContainer.classList.remove('visible');
