--- a/cat-q.html
+++ b/cat-q.html
@@ -587,31 +587,31 @@ body {
 <script>
 // Question definitions with categories
 const questions = [
-    { id:1, text: 'Când interacționez cu cineva, îi copiez intenționat limbajul corporal sau expresiile faciale.', category: "Compensare" },
-    { id:2, text: 'Îmi monitorizez limbajul corporal sau expresiile faciale pentru a părea relaxat(ă).', category: "Mascare" },
-    { id:3, text: 'Rareori simt nevoia de a juca un rol pentru a face față unei situații sociale.', category: "Asimilare", reverse: true },
-    { id:4, text: 'Am dezvoltat un scenariu pe care îl urmez în situații sociale.', category: "Compensare" },
-    { id:5, text: 'Repet expresii pe care le-am auzit de la alții în exact aceeași formă în care le-am auzit pentru prima dată.', category: "Compensare" },
-    { id:6, text: 'Îmi ajustez limbajul corporal sau expresiile faciale pentru a părea interesat(ă) de persoana cu care interacționez.', category: "Mascare" },
-    { id:7, text: 'În situații sociale, simt că „interpretez" mai degrabă decât că sunt eu însumi/însămi.', category: "Asimilare" },
-    { id:8, text: 'În interacțiunile mele sociale, folosesc comportamente pe care le-am învățat observându-i pe alții interacționând.', category: "Compensare" },
-    { id:9, text: 'Îmi analizez mereu impresia pe care o las asupra altor persoane.', category: "Mascare" },
-    { id:10, text: 'Am nevoie de sprijinul altor persoane pentru a socializa.', category: "Asimilare" },
-    { id:11, text: 'Îmi exersez expresiile faciale și limbajul corporal pentru a mă asigura că par naturale.', category: "Compensare" },
-    { id:12, text: 'Nu simt nevoia de a stabili contact vizual cu alte persoane dacă nu vreau.', category: "Mascare", reverse: true },
-    { id:13, text: 'Trebuie să mă forțez să interacționez cu oamenii atunci când sunt în situații sociale.', category: "Asimilare" },
-    { id:14, text: 'Am încercat să îmi îmbunătățesc înțelegerea abilităților sociale prin observarea altor oameni.', category: "Compensare" },
-    { id:15, text: 'Îmi monitorizez limbajul corporal sau expresiile faciale pentru a părea interesat(ă) de persoana cu care interacționez.', category: "Mascare" },
-    { id:16, text: 'Când mă aflu în situații sociale, încerc să găsesc modalități de a evita interacțiunea cu ceilalți.', category: "Asimilare" },
-    { id:17, text: 'Am cercetat regulile interacțiunilor sociale pentru a-mi îmbunătăți propriile abilități sociale.', category: "Compensare" },
-    { id:18, text: 'Sunt întotdeauna conștient(ă) de impresia pe care o las asupra altor persoane.', category: "Mascare" },
-    { id:19, text: 'Mă simt liber(ă) să fiu eu însumi/însămi atunci când sunt în prezența altor persoane.', category: "Asimilare", reverse: true },
-    { id:20, text: 'Învăț cum folosesc oamenii limbajul corporal și expresiile faciale pentru a interacționa, urmărind emisiuni TV sau filme ori citind literatură.', category: "Compensare" },
-    { id:21, text: 'Îmi ajustez limbajul corporal sau expresiile faciale pentru a părea relaxat(ă).', category: "Mascare" },
-    { id:22, text: 'Atunci când vorbesc cu alte persoane, simt că discuția decurge natural.', category: "Asimilare", reverse: true },
-    { id:23, text: 'Am petrecut timp învățând abilități sociale din emisiuni TV și filme și încerc să le aplic în interacțiunile mele.', category: "Compensare" },
-    { id:24, text: 'În interacțiunile sociale, nu acord atenție la ceea ce face fața sau corpul meu.', category: "Mascare", reverse: true },
-    { id:25, text: 'În situațiile sociale, simt că mă prefac a fi „normal(ă)".', category: "Asimilare" }
+    { id: 1, text: 'Atunci când interacționez cu cineva, îmi copiez în mod deliberat limbajul corporal sau expresiile faciale.', category: "Compensare" },
+    { id: 2, text: 'Îmi monitorizez limbajul corporal sau expresiile faciale pentru a părea relaxat(ă).', category: "Mascare" },
+    { id: 3, text: 'Rar simt nevoia de a mă preface pentru a trece printr-o situație socială.', category: "Asimilare", reverse: true },
+    { id: 4, text: 'Am dezvoltat un scenariu pe care îl urmez în situațiile sociale.', category: "Compensare" },
+    { id: 5, text: 'Repet fraze pe care le-am auzit de la alții exact în același mod în care le-am auzit prima dată.', category: "Compensare" },
+    { id: 6, text: 'Îmi ajustez limbajul corporal sau expresiile faciale pentru a părea interesat(ă) de persoana cu care interacționez.', category: "Mascare" },
+    { id: 7, text: 'În situațiile sociale, simt că „interpretez" un rol mai degrabă decât că sunt eu însumi/însămi.', category: "Asimilare" },
+    { id: 8, text: 'În propriile mele interacțiuni sociale, folosesc comportamente pe care le-am învățat observându-i pe alții.', category: "Compensare" },
+    { id: 9, text: 'Mă gândesc întotdeauna la impresia pe care o las asupra altor persoane.', category: "Mascare" },
+    { id: 10, text: 'Am nevoie de sprijinul altor persoane pentru a socializa.', category: "Asimilare" },
+    { id: 11, text: 'Exersez expresiile faciale și limbajul corporal pentru a mă asigura că arată natural.', category: "Compensare" },
+    { id: 12, text: 'Nu simt nevoia de a face contact vizual cu alte persoane dacă nu vreau.', category: "Mascare", reverse: true },
+    { id: 13, text: 'Trebuie să mă forțez să interacționez cu oamenii atunci când sunt în situații sociale.', category: "Asimilare" },
+    { id: 14, text: 'Am încercat să îmi îmbunătățesc înțelegerea abilităților sociale observându-i pe alții.', category: "Compensare" },
+    { id: 15, text: 'Îmi monitorizez limbajul corporal sau expresiile faciale pentru a părea interesat(ă) de persoana cu care interacționez.', category: "Mascare" },
+    { id: 16, text: 'În situațiile sociale, încerc să găsesc modalități de a evita interacțiunea cu ceilalți.', category: "Asimilare" },
+    { id: 17, text: 'Am cercetat regulile interacțiunilor sociale pentru a-mi îmbunătăți propriile abilități sociale.', category: "Compensare" },
+    { id: 18, text: 'Sunt întotdeauna conștient(ă) de impresia pe care o las asupra altor persoane.', category: "Mascare" },
+    { id: 19, text: 'Mă simt liber(ă) să fiu eu însumi/însămi atunci când sunt cu alte persoane.', category: "Asimilare", reverse: true },
+    { id: 20, text: 'Învăț cum folosesc oamenii corpul și fața pentru a interacționa urmărind emisiuni TV sau filme, sau citind ficțiune.', category: "Compensare" },
+    { id: 21, text: 'Îmi ajustez limbajul corporal sau expresiile faciale pentru a părea relaxat(ă).', category: "Mascare" },
+    { id: 22, text: 'Atunci când vorbesc cu alte persoane, simt că conversația curge în mod natural.', category: "Asimilare", reverse: true },
+    { id: 23, text: 'Am petrecut timp învățând abilități sociale din emisiuni TV și filme și încerc să le folosesc în interacțiunile mele.', category: "Compensare" },
+    { id: 24, text: 'În interacțiunile sociale, nu acord atenție la ceea ce face fața sau corpul meu.', category: "Mascare", reverse: true },
+    { id: 25, text: 'În situațiile sociale, simt că mă prefac că sunt „normal(ă)".', category: "Asimilare" }
 ];
 
 const form = document.getElementById('catqForm');
