added FAQ section

--- a/index.html
+++ b/index.html
@@ -2603,6 +2603,85 @@ body {
         </div>
     </div>
     <div class="section-divider d-md-none"></div>
+    <!-- FAQ Section with semantic structure and mobile-friendly design -->
+    <div class="faq-section container my-5" id="section-faq">
+        <h2 class="text-center mb-4"><i class="fas fa-question-circle text-primary me-2"></i>Întrebări frecvente despre testul RAADS-R</h2>
+
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <!-- FAQ Item 1 -->
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-body">
+                        <h3 class="card-title h5 mb-3 d-flex align-items-center">
+                            <i class="fas fa-question-circle text-primary me-2"></i>
+                            Este testul RAADS-R un diagnostic medical definitiv?
+                        </h3>
+                        <div class="card-text">
+                            <p>Nu, testul RAADS-R este <strong>exclusiv un instrument de screening orientativ</strong> și nu constituie un diagnostic medical oficial. Deși are o sensibilitate de 97% și specificitate de 100% conform studiului original, singura modalitate de a afla sigur dacă aveți Tulburare de Spectru Autist (TSA) este să obțineți un diagnostic de la un medic psihiatru sau psiholog clinician specializat în tulburări de neurodezvoltare.</p>
+                            <p>Rezultatele testului pot fi un punct de plecare valoros pentru o discuție cu un specialist, dar nu înlocuiesc evaluarea clinică profesională completă care include istoricul dezvoltării, observația clinică și alte instrumente de evaluare.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 2 -->
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-body">
+                        <h3 class="card-title h5 mb-3 d-flex align-items-center">
+                            <i class="fas fa-question-circle text-primary me-2"></i>
+                            Ce trebuie să fac dacă scorul testului indică autism?
+                        </h3>
+                        <div class="card-text">
+                            <p>Dacă scorul tău depășește pragul de 65, indicând trăsături autiste semnificative, ar fi recomandat să consulți un specialist pentru o evaluare clinică detaliată. Poți salva rezultatul în format PDF folosind opțiunea "Exportă ca PDF" și să-l prezinți unui psihiatru sau psiholog clinician specializat în tulburări de neurodezvoltare.</p>
+                            <p>Un diagnostic formal poate oferi acces la servicii de suport, terapii specifice și poate ajuta la o mai bună înțelegere a propriilor experiențe. Pentru evaluări profesionale, poți vizita <a href="https://www.doctoradhd.com/" target="_blank">doctoradhd.com</a> sau să te adresezi grupurilor de suport menționate pe site pentru recomandări de specialiști.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 3 -->
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-body">
+                        <h3 class="card-title h5 mb-3 d-flex align-items-center">
+                            <i class="fas fa-question-circle text-primary me-2"></i>
+                            Cât durează și cum se desfășoară testul?
+                        </h3>
+                        <div class="card-text">
+                            <p>Testul RAADS-R constă în 80 de afirmații și durează în medie între 10 și 30 de minute pentru completare, în funcție de viteza individuală de reflecție. Este un instrument de <strong>auto-raportare</strong>, ceea ce înseamnă că este completat de către tine, evaluând propria experiență.</p>
+                            <p>Fiecare afirmație are patru opțiuni de răspuns: (1) Adevărat acum și când eram mic(ă), (2) Adevărat doar acum, (3) Adevărat doar când aveam sub 16 ani, sau (4) Niciodată adevărat. Nu există răspunsuri "corecte" sau "greșite" - scopul este să reflecți cât mai sincer asupra propriilor experiențe de viață.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 4 -->
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-body">
+                        <h3 class="card-title h5 mb-3 d-flex align-items-center">
+                            <i class="fas fa-question-circle text-primary me-2"></i>
+                            Care sunt simptomele tipice ale autismului la adulți?
+                        </h3>
+                        <div class="card-text">
+                            <p>Autismul la adulți se poate manifesta diferit față de prezentarea clasică la copii și poate include: dificultăți în interacțiunile sociale și comunicare (înțelegerea subtextului, a limbajului corporal, menținerea contactului vizual), interese focalizate și intense, nevoia de rutină și predictibilitate, sensibilități senzoriale (la sunete, lumini, texturi), și provocări în gestionarea schimbărilor neașteptate.</p>
+                            <p>Multe persoane autiste dezvoltă strategii de mascare a trăsăturilor autiste (camuflaj), ceea ce poate face diagnosticul mai dificil la adulți. Testul RAADS-R a fost special conceput pentru a identifica trăsăturile autiste la adulți care pot "scăpa de sub radarul diagnostic" din cauza acestor strategii de adaptare.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FAQ Item 5 -->
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-body">
+                        <h3 class="card-title h5 mb-3 d-flex align-items-center">
+                            <i class="fas fa-question-circle text-primary me-2"></i>
+                            Cât de fiabil este testul RAADS-R comparativ cu alte teste?
+                        </h3>
+                        <div class="card-text">
+                            <p>RAADS-R este unul dintre cele mai fiabile instrumente de screening pentru autism la adulți, cu o sensibilitate de 97% (identifică corect 97% dintre persoanele autiste) și o specificitate de 100% (identifică corect toate persoanele non-autiste) conform studiului de validare original. Aceste valori indică o precizie foarte ridicată în comparație cu alte instrumente de screening disponibile.</p>
+                            <p>Alte teste frecvent utilizate pentru screening-ul autismului la adulți includ AQ (Autism Quotient), cu o sensibilitate de aproximativ 80%, și RAADS-14, o versiune scurtă a acestui test cu 14 întrebări. RAADS-R oferă însă o evaluare mai comprehensivă, analizând patru domenii cheie: limbaj, relaționare socială, senzorial-motor și interese circumscrise.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section-divider d-md-none"></div>
     <div class="services-section" id="section-support">
         <div class="services-container">
             <!-- Header Section -->
