--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
                                 <p>Testul RAADS-R constă în 80 de afirmații și durează în medie între 10 și 30 de minute pentru completare, în funcție de viteza individuală de reflecție. Este un instrument de <strong>auto-raportare</strong>, ceea ce înseamnă că este completat de către tine, evaluând propria experiență.</p>
-                                <p>Fiecare afirmație are patru opțiuni de răspuns: <b>(1)</b> Adevărat acum și când eram mic(ă), <b>(2)</b> Adevărat doar acum, <b>(3)</b> Adevărat doar când aveam sub 16 ani, sau </p>(4)</div> Niciodată adevărat. Nu există răspunsuri <b>"corecte"</b> sau <b>"greșite"</b> - scopul este să reflecți cât mai sincer asupra propriilor experiențe de viață.</p>
+                                <p>Fiecare afirmație are patru opțiuni de răspuns: <b>(1)</b> Adevărat acum și când eram mic(ă), <b>(2)</b> Adevărat doar acum, <b>(3)</b> Adevărat doar când aveam sub 16 ani, sau <b>(4)</b> Niciodată adevărat. Nu există răspunsuri <b>"corecte"</b> sau <b>"greșite"</b> - scopul este să reflecți cât mai sincer asupra propriilor experiențe de viață.</p>
                             </div>
                         </div>
                     </div>
