--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Testare Online pentru Autism la Adulți (Autoevaluare) | RAADS-R și CAT-Q</title>
+<title>Testare Online Autism la Adulți (Autoevaluare) | RAADS-R și CAT-Q</title>
 
 <!-- Preconnect to critical domains -->
 <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
