--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <li>
                 <a href="#section-faq" class="quick-nav-item">
                     <i class="fas fa-info-circle"></i>
-                    <span>Despre test</span>
+                    <span>Despre testul RAADS-R</span>
                 </a>
             </li>
             <li>
@@ -1305,26 +1305,26 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Contact Section -->
-            <div class="contact-section">
-                <div class="contact-card">
-                    <h4>
-                        <i class="fas fa-info-circle text-primary me-2"></i>
-                        Mai multe informații
-                    </h4>
-                    <p>Pentru o descriere completă a serviciilor și pentru a afla cum pot să te sprijin:</p>
-                    <div class="contact-options">
-                        <a href="https://www.ovidiuplaton.com/" target="_blank" class="contact-link">
-                            <i class="fas fa-globe"></i>
-                            ovidiuplaton.com
-                        </a>
-                        <a href="mailto:hello@ovidiuplaton.com" class="contact-link">
-                            <i class="fas fa-envelope"></i>
-                            hello@ovidiuplaton.com
-                        </a>
-                    </div>
-                </div>
+        </div>
+    </div>
+    <div class="section-divider d-md-none mb-5"></div>
+    <!-- Contact Section -->
+    <div class="contact-section mb-5">
+        <div class="contact-card">
+            <h4>
+                <i class="fas fa-info-circle text-primary me-2"></i>
+                Mai multe informații
+            </h4>
+            <p>Pentru o descriere completă a serviciilor și pentru a afla cum pot să te sprijin:</p>
+            <div class="contact-options">
+                <a href="https://www.ovidiuplaton.com/" target="_blank" class="contact-link">
+                    <i class="fas fa-globe"></i>
+                    ovidiuplaton.com
+                </a>
+                <a href="mailto:hello@ovidiuplaton.com" class="contact-link">
+                    <i class="fas fa-envelope"></i>
+                    hello@ovidiuplaton.com
+                </a>
             </div>
         </div>
     </div>
