--- a/cat-q.html
+++ b/cat-q.html
@@ -228,12 +228,12 @@
 
     <div class="initial-section justify-content-center">
         <div class="d-flex align-items-center mb-3">
-            <a href="index.html" class="btn btn-outline-primary me-3" style="border-radius: 20px; padding: 6px 15px;">
-                <i class="fas fa-arrow-left me-1"></i> RAADS-R Test
+            <a href="index.html" class="btn btn-outline-primary me-3" style="border-radius: 20px; padding: 6px 15px; font-size:1.1rem; font-weight: bold;">
+                <i class="fas fa-arrow-left me-1"></i> Înapoi la RAADS-R Test
             </a>
-            <h1 class="text-center mb-0" style="font-size: 1.5rem; font-weight: bold;">Test de Evaluare a Camuflării Sociale: CAT-Q (Camouflaging Autistic Traits Questionnaire)</h1>
         </div>
-        <h2 class="text-center mb-3" style="font-size: 1.3rem; color: #1976D2;">Cum măsurăm masking-ul și camuflarea trăsăturilor autiste la adulți</h2>
+        <h1 class="text-center mb-0" style="font-size: 1.5rem; font-weight: bold;">Test de Evaluare a Camuflării Sociale: CAT-Q (Camouflaging Autistic Traits Questionnaire)</h1>
+        <h2 class="text-center mb-3" style="font-size: 1.3rem; color: #1976D2;">pentru măsurarea masking-ului și camuflării trăsăturilor autiste la adulți</h2>
 
         <div class="empathetic-intro">
             <p>Ai observat vreodată că depui efort semnificativ pentru a părea "normal" în situații sociale? Poate ai dezvoltat strategii complexe pentru a ascunde anumite comportamente sau pentru a te adapta mediilor sociale. Aceste strategii sunt cunoscute sub numele de camuflare sau "masking".</p>
